<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/itGestionMedic"
        android:title="@string/gestion_des_prescriptions"
        app:showAsAction="collapseActionView" />
    <item
        android:id="@+id/itDispositif"
        android:icon="@drawable/ic_devices"
        android:title="@string/gestion_des_dispositifs"
        app:showAsAction="collapseActionView" />
    <item
        android:id="@+id/itProfil"
        android:title="@string/profil"
        app:showAsAction="collapseActionView" />
    <item
        android:id="@+id/itGuide"
        android:title="@string/guide_d_utilisation"
        android:visible="false"
        app:showAsAction="collapseActionView" />
    <item
        android:id="@+id/menu_language_switch"
        android:title="FR"
        android:visible="false"
        app:actionLayout="@layout/layout_menu_langage"
        app:showAsAction="always" />
    <item
        android:id="@+id/itDeconnexion"
        android:title="@string/d_connexion" />
</menu>