<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/etEmailmodifie"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:hint="@string/adresse_mail"
        android:inputType="textEmailAddress"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/etMotDePasse"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/etEmailmodifie"
        android:layout_marginTop="20dp"
        android:hint="@string/mot_de_passe"
        android:inputType="textPassword"
        android:textSize="24sp" />

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etMotDePasse"
        android:layout_marginTop="25dp"
        android:text="@string/connexion" />

    <TextView
        android:id="@+id/textViewForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/buttonLogin"
        android:layout_marginTop="20dp"
        android:text="@string/mot_de_passe_oublie"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="18sp"
        android:visibility="gone" />

    <TextView
        android:id="@+id/textViewCreateAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textViewForgotPassword"
        android:layout_marginTop="20dp"
        android:text="@string/creer_un_compte"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

    </LinearLayout>

    <Button
        android:id="@+id/btlangue"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_weight="1"
        android:text="langue"
        android:visibility="gone" />

</RelativeLayout>
