<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".GestionDevicesActivity">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvListeDispositifs"
        android:layout_width="411dp"
        android:layout_height="305dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:paddingStart="16dp"
        android:paddingLeft="16dp"
        android:paddingTop="16dp">

    </androidx.recyclerview.widget.RecyclerView>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="16dp"
        android:paddingTop="16dp"
        android:text="@string/ajouter_un_dispositif"
        android:textSize="20sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginTop="16dp"
        android:hint="@string/num_ro_de_s_rie">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etNoSerie"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="number"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="74dp"
        android:layout_marginTop="16dp"
        android:hint="@string/nom_du_patient">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etAssociatedPatientFullName"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btAjoutD"
        android:layout_width="181dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:text="@string/valider" />
</LinearLayout>