<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:typeface="serif"
    tools:context=".AddPrescriptionActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="581dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="16dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.169">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/ajNom"
                app:counterEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edNameOfPrescription"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="text"
                    android:textSize="16sp" />
            </com.google.android.material.textfield.TextInputLayout>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp">

            <TextView
                android:id="@+id/tx2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="5dp"
                android:text="@string/ajSearch"
                android:textSize="16sp" />

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tx2"
                android:layout_marginTop="1dp"
                android:dropDownHeight="500dp" />


        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="9"
                    app:srcCompat="@drawable/ic_calendar" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/ajD"
                    app:counterEnabled="false">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edDateOfPrescription"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="none" />
                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>


        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="9"
                    app:srcCompat="@drawable/ic_calendar" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/ajDD"
                    app:counterEnabled="false">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edDateOfStart"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="none" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/ajDF"
                app:counterEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edDurationOfPrescriptionInDays"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="number" />
            </com.google.android.material.textfield.TextInputLayout>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/ajInter"
                app:counterEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edFrequencyBetweenDosesInHours"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:ems="1"
                    android:inputType="none" />
            </com.google.android.material.textfield.TextInputLayout>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/frequencyOfIntakeInDays"
                app:counterEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edFrequencyOfIntakeInDays"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="number">

                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/firstintakehour">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edFirstIntakeHour"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="none" />
            </com.google.android.material.textfield.TextInputLayout>
        </RelativeLayout>
    </LinearLayout>

    <Button
        android:id="@+id/btAjoutM"
        android:layout_width="181dp"
        android:layout_height="wrap_content"
        android:text="@string/ajBt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>
